--- a/logstash/pipeline/logstash.conf
+++ b/logstash/pipeline/logstash.conf
@@ -57,9 +57,9 @@ output {
 	  	hosts => ["elasticsearch:9200"]
 		  index => "logstash-%{type}-%{+YYYY.MM.dd}"
   	}
-    stdout {
-      codec => rubydebug
-    }
+#    stdout {
+#      codec => rubydebug
+#    }
   }
 
 }
